--- a/manifest.json
+++ b/manifest.json
@@ -1,50 +1,50 @@
 {
  "name": "Judul Blog/ Website",
- "short_name": "Judul Blog/ Website",
- "description": "Deskripsi Blog/ Website",
+ "short_name": "Diza Rahayu",
+ "description": "Hello World ",
  "lang": "id",
  "dir": "ltr",
- "theme_color": "Warna Address Bar (Hex)",
- "start_url": "URL Blog/ Website",
- "background_color": "Warna Background (Hex)",
+ "theme_color": "Warna Address Bar (Hex) auto",
+ "start_url": "https://www.dizarahayu.com",
+ "background_color": "Warna Background (Hex) auto gardien",
  "display": "standalone",
  "orientation": "portrait-primary",
  "version": "1.0.0",
- "author": "Nama Author",
+ "author": "Wawan",
  "icons": [{
-    "src": "URL Gambar 36 x 36 (PNG)",
+    "src": "image link blog 36 x 36 (webp)",
     "sizes": "36x36",
-    "type": "image/png",
+    "type": "image/webp",
     "density": "0.75"
   }, {
     "src": "URL Gambar 48 x 48 (PNG)",
     "sizes": "48x48",
-    "type": "image/png",
+    "type": "image/webp",
     "density": "1.0"
   }, {
     "src": "URL Gambar 72 x 72 (PNG)",
     "sizes": "72x72",
-    "type": "image/png",
+    "type": "image/webp",
     "density": "1.5"
   }, {
     "src": "URL Gambar 96 x 96 (PNG)",
     "sizes": "96x96",
-    "type": "image/png",
+    "type": "image/webp",
     "density": "2.0"
   }, {
     "src": "URL Gambar 144 x 144 (PNG)",
     "sizes": "144x144",
-    "type": "image/png",
+    "type": "image/webp",
     "density": "3.0"
   }, {
     "src": "URL Gambar 192 x 192 (PNG)",
     "sizes": "192x192",
-    "type": "image/png",
+    "type": "image/webp",
     "density": "4.0"
   }, {
     "src": "URL Gambar 512 x 512 (PNG)",
     "sizes": "512x512",
-    "type": "image/png",
+    "type": "image/webp",
     "density": "5.0"
   }]
 }
