--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
- "name": "Judul Blog/ Website",
- "short_name": "Diza Rahayu",
- "description": "Hello World ",
+ "name": "Diza Rahayu",
+ "short_name": "DR",
+ "description": "you Mus be written description on here",
  "lang": "id",
  "dir": "ltr",
  "theme_color": "Warna Address Bar (Hex) auto",
